[metadata]
name = tempest-horizon
summary = Tempest Plugin for Horizon tests
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    tempest_horizon
[entry_points]
tempest.test_plugins =
    horizon_tests = tempest_horizon.plugin:HorizonTempestPlugin

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = tempest_horizon/locale
domain = tempest_horizon

[update_catalog]
domain = tempest_horizon
output_dir = tempest_horizon/locale
input_file = tempest_horizon/locale/tempest_horizon.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = tempest_horizon/locale/tempest_horizon.pot
