[metadata]
name = tempest-horizon
summary = Tempest Plugin for Horizon tests
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://opendev.org/openstack/tempest-horizon
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[files]
packages =
    tempest_horizon

[entry_points]
tempest.test_plugins =
    horizon = tempest_horizon.plugin:HorizonTempestPlugin
